--- a/public/assets/game-layout.css
+++ b/public/assets/game-layout.css
@@ -23,7 +23,6 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: "Cascadia Code", sans-serif;
-    height: 100vh;
 }
 
 .game-info {
@@ -57,14 +56,15 @@ body {
 .map-display {
     width: 1024px;
     border-radius: 5px;
+    overflow-y: scroll;
 }
 
 .adventure-log {
     border-radius: 5px;
     width: 1024px;
     overflow-y: scroll;
-    height: 30vh;
     font-size: 12px;
+    max-height: 20vh;
 }
 
 .adventure-log__divider {
@@ -125,12 +125,40 @@ body {
     background-color: #3A3D35;
 }
 
+.wooden-wall {
+    background-color: saddlebrown;
+}
+
 .floor {
     background-color: #D9E6DA;
 }
 
+.boulder {
+    background-color: grey;
+}
+
+.cobble {
+    background-color: sandybrown;
+}
+
 .tree {
     background-color: #5B8C5A;
+}
+
+.short-tree {
+    background-color: #5B754A;
+}
+
+.pine-tree {
+    background-color: darkolivegreen;
+}
+
+.mountain {
+    background-color: slategrey;
+}
+
+.water {
+    background-color: cadetblue;
 }
 
 .npc {
@@ -147,6 +175,10 @@ body {
 
 .door {
     background-color: #A3B186;
+}
+
+.altar {
+    background-color: white;
 }
 
 .player {
