--- a/public/assets/game-layout.css
+++ b/public/assets/game-layout.css
@@ -46,6 +46,11 @@ body {
     text-decoration: none;
 }
 
+.menu__link-ingame:visited,
+.menu__link-ingame:active, a {
+    color: var(--text-color);
+}
+
 .level-title__heading {
     margin: 10px;
 }
